# paxboard

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  config.toml  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml
pages/: index.lua
server/: index.ts  tsconfig.json
shared/: types.ts
src/: App.tsx  config.ts  index.css  large_model_proxy.rs  main.rs  types.ts
src/components/: AIServices.tsx  LocalServices.tsx  ProgressBar.tsx  SectionHeader.tsx  ServiceTile.tsx  StarryBackground.tsx  Weather.tsx  WorldClocks.tsx
src/hooks/: StatsContext.ts  StatsProvider.tsx
src/sections/: AIServices.tsx  LocalServices.tsx  SystemStats.tsx  Weather.tsx  WorldClocks.tsx
