[package]
name = "paxboard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
toml = "0.9.4"
paxhtml = { git = "https://github.com/philpax/paxhtml.git" }
paxhtml_tailwind = { git = "https://github.com/philpax/paxhtml.git" }
tower-http = { version = "0.6.6", features = ["fs"] }
